@@ -103,7 +103,7 @@ RIDE_TYPE_INVERTED_ROLLER_COASTER: (678, 850, 686)
 RIDE_TYPE_INVERTED_IMPULSE_COASTER: (643, 750, 569)
 RIDE_TYPE_MINI_SUSPENDED_COASTER: (512, 696, 475)
 RIDE_TYPE_MINE_RIDE: (644, 458, 381)
-RIDE_TYPE_HEARTLINE_TWISTER_COASTER: (314, 658, 462)
+RIDE_TYPE_HEARTLINE_TWISTER_COASTER: (474, 658, 462)
 RIDE_TYPE_LAY_DOWN_ROLLER_COASTER: (682, 666, 548)
 RIDE_TYPE_FLYING_ROLLER_COASTER: (719, 711, 678)
 RIDE_TYPE_REVERSE_FREEFALL_COASTER: (518, 747, 534)
